5/12/11
  If a window is opened or closed on an unfocused desktop the desktop switcher will be updated

4/12/11
  Dessktops in the desktop switcher can be named from the config file

1/12/11
  Colours and font are now read from a rc file and can be update with a keyboard shortcut

30/11/11
  Added bar with desktop switcher and statusbar

28/11/11
  Replaced next/prev_desktop function with shorter rotate_desktop function
  (thanks to c00kiemon5ter)

28/11/11
  Added last desktop function for switching back to the last opened desktop
  (thanks to c00kimon5ter)

26/11/11
  Added option to click on a window to focus it
  (thanks to richo4)

21/11/11
  Fix for transient windows not being managed

15/11/11
  Fix for when trying to swap master with only one window

23/10/11
  Fine tuned the popup window management so notification windows aren't managed either

15/10/11
  Added having applications start on specified desktop

13/10/11
  Added ability to use grow_window/shrink_window in grid mode with 3 or 4 windows

13/10/11
  Popup windows now aren't managed/added to the stack

10/10/11
  Reapplied setting master_size relevant to default mode

8/10/11
  For only one window or fullscreen mode there is no border

8/10/11
  Fixed fullscreen mplayer

8/10/11
  Removed useless gaps when in grid mode

16/9/11
  Added back the option to have the panel at the top
  Fine tuned the grid tiling mode

13/9/11
  Added back horizontal tiling, follow mouse and follow window

12/9/11
  Returned to catwm tiling methods - with the ability to resize the window at the top of the stack

9/9/11
   Fine tuned the next/prev desktop and the destroy notify functions

 8/9/11
    Have a proper destroy notify function now that removes destroyed windows from
     the window manager stack for the desktop they were on.