@@ -1,4 +1,4 @@
- /* config.h for snapwm.c [ 0.0.5 ]
+ /* config.h for snapwm.c [ 0.0.7 ]
  *
  *  Started from catwm 31/12/10
  *  Bad window error checking and numlock checking used from
@@ -43,7 +43,7 @@
 
 static const char *defaultcolor[] = { "#ff0000", "#00ff00", "#0000ff", "#000000", "#ffffff", };
 
-static const char *desktop_label[] = { ".", ":", ".:", "::", ".::", ":::", };
+//static const char *desktop_label[] = { ".", ":", ".:", "::", ".::", ":::", };
 // static const char *desktop_label[] = { "1", "2", "3", "4", "5", "6", };
 
 // Applications to a specific desktop
