@@ -1,3 +1,6 @@
+6/12/11/
+  Desktop labels changeable from the rc file
+
 5/12/11
   If a window is opened or closed on an unfocused desktop the desktop switcher will be updated
 
